tests/ui/issues/issue-18159.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-18159.rs:2:9
   |
LL |     let x;
   |         ^
   |
help: consider giving `x` an explicit type
   |
LL |     let x: /* Type */;
   |          ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
